fix: page title spacing

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -54,3 +54,7 @@ button {
         }
     }
 }
+
+.page-title{
+    margin-top: 0;
+}
